[gd_scene load_steps=4 format=3 uid="uid://b8k1w4t6w77b8"]

[ext_resource type="Script" path="res://Scripts/menu_overlay.gd" id="1_qh3th"]
[ext_resource type="PackedScene" uid="uid://l0iktwkvf55o" path="res://UI Scenes/VolumeSlider.tscn" id="1_yussu"]

[sub_resource type="LabelSettings" id="LabelSettings_tv1ij"]
font_size = 25

[node name="MenuOverlay" type="ColorRect"]
visible = false
offset_right = 128.0
offset_bottom = 360.0
color = Color(0, 0, 0, 0.94902)
script = ExtResource("1_qh3th")

[node name="PAUSED" type="Label" parent="."]
layout_mode = 0
offset_left = 14.0
offset_top = 4.0
offset_right = 111.0
offset_bottom = 42.0
text = "PAUSED"
label_settings = SubResource("LabelSettings_tv1ij")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Restart" type="Button" parent="."]
layout_mode = 0
offset_left = 31.0
offset_top = 125.0
offset_right = 96.0
offset_bottom = 156.0
text = "Restart"

[node name="Return2Menu" type="Button" parent="."]
layout_mode = 0
offset_left = 27.0
offset_top = 173.0
offset_right = 100.0
offset_bottom = 227.0
text = "Return 
to Menu"

[node name="Quit" type="Button" parent="."]
layout_mode = 0
offset_left = 28.0
offset_top = 244.0
offset_right = 93.0
offset_bottom = 275.0
text = "Quit
"

[node name="VolumeSlider" parent="." instance=ExtResource("1_yussu")]
layout_mode = 0
offset_left = 15.0
offset_top = 63.0
offset_right = 121.0
offset_bottom = 79.0
bus_name = "Master"

[node name="Volume" type="Label" parent="VolumeSlider"]
layout_mode = 0
offset_left = 19.0
offset_top = 10.0
offset_right = 78.0
offset_bottom = 33.0
text = "Volume
"

[connection signal="pressed" from="Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="Return2Menu" to="." method="_on_return_2_menu_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
